# oracle-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LAUNCHGUIDE.md  README.md  glama.json  pyproject.toml  server.json
.cursor/: mcp.json
.cursor/commands/: git-commit-push.md  release.md  run-mcp-tool.md  run-pinrag-mcp-tool.md
.cursor/rules/: langchain-resources.mdc  no-auto-git-commit-push.mdc
.cursor/skills/git-commit-push/: SKILL.md
.cursor/skills/langchain-resources/: SKILL.md
.cursor/skills/pinrag-release/: SKILL.md
.cursor/skills/release/: SKILL.md
.cursor/skills/run-pinrag-local-mcp-tool/: SKILL.md
.cursor/skills/run-pinrag-mcp-tool/: SKILL.md
.cursor/skills/run-pinrag-unit-tests/: SKILL.md
.github/workflows/: publish.yml
data/pdfs/: .gitkeep
docs/: vscode-mcp-install.html
notes/: Project Deep Research with LangGraphCourse-Transcripts.txt  README.md  cursor-mcp-list-investigation.md  cursor-mcp-setup.md  distribution-options.md  embedding-provider-decision.md  env-vars.example.md  evaluation-strategy.md  how-to-release.md  implementation-checklist.md  langchain-features-used.md  langchain-rationale.md  langgraph-rationale.md  langsmith-setup.md  mcp-advertising-distribution-strategy.md  mcp-server-research.md  mmr-analysis.md  package-manager-decision.md  pdf-extraction-layout-vs-plain.md  pdf-parsing-library-analysis.md  release-v0.5.0.md  requirements-checklist.md  saas-product-idea.md  vector-database-decision.md  vscode-marketplace-investigation.md  workspace-projects-overview.md
scripts/: README.md  _script_env.py  create_eval_dataset.py  create_multiquery_stress_dataset.py  index_cli.py  index_discord_channels.py  index_pdf_cli.py  list_indexed_docs_cli.py  mcp_server.py  min_k_per_question.py  print_pdf_all_metadata.py  print_pdf_chunks.py  print_pdf_metadata.py  print_pdf_page.py  query_rag_cli.py  rag_cli.py  test_llm_cli.py
src/oracle_rag/: cli.py  config.py
src/oracle_rag/chunking/: __init__.py  splitter.py
src/oracle_rag/evaluation/: __init__.py  __main__.py  evaluators.py  run_evaluation.py  target.py
src/oracle_rag/indexing/: __init__.py  discord_indexer.py  discord_loader.py  pdf_indexer.py  youtube_indexer.py  youtube_loader.py
src/oracle_rag/llm/: __init__.py  openai_client.py
src/oracle_rag/mcp/: __init__.py  server.py  tools.py
src/oracle_rag/pdf/: __init__.py  pypdf_loader.py
src/oracle_rag/rag/: __init__.py  chain.py  formatting.py  multiquery.py  prompts.py  query_preprocess.py  rerank.py
src/pinrag/: __init__.py  cli.py  config.py  env_validation.py
src/pinrag/chunking/: __init__.py  splitter.py
src/pinrag/embeddings/: __init__.py  openai_client.py
src/pinrag/evaluation/: __init__.py  __main__.py  evaluators.py  run_evaluation.py  target.py
src/pinrag/indexing/: __init__.py  discord_indexer.py  discord_loader.py  github_indexer.py  github_loader.py  pdf_indexer.py  plaintext_indexer.py  plaintext_loader.py  youtube_indexer.py  youtube_loader.py  youtube_vision.py
src/pinrag/llm/: __init__.py  chat_model.py  openai_client.py
src/pinrag/mcp/: __init__.py  logging_utils.py  resource_text.py  server.py  tools.py
src/pinrag/pdf/: __init__.py  pypdf_loader.py
src/pinrag/rag/: __init__.py  chain.py  formatting.py  multiquery.py  prompts.py  query_preprocess.py  rerank.py
src/pinrag/vectorstore/: __init__.py  chroma_client.py  chroma_filters.py  docstore.py  retriever.py
tests/: __init__.py  conftest.py  mcp_stdio_integration.env.example  test_chunking.py  test_cli.py  test_config.py  test_discord.py  test_embeddings.py  test_env_validation.py  test_evaluation.py  test_evaluation_target.py  test_github.py  test_indexing.py  test_llm.py  test_mcp_add_files.py  test_mcp_list_documents.py  test_mcp_paths.py  test_mcp_query.py  test_mcp_server.py  test_mcp_server_config.py  test_mcp_stdio_integration.py  test_mcp_stdio_pypi.py  test_mcp_stdio_repo.py  test_mcp_verbose_logging.py  test_multiquery.py  test_parent_child.py  test_plaintext_indexer.py  test_plaintext_loader.py  test_pypdf_loader.py  test_query_preprocess.py  test_rag.py  test_rerank.py  test_scripts_clis.py  test_structure_aware_chunking.py  test_structure_config.py  test_vectorstore.py  test_youtube.py  test_youtube_indexer.py  test_youtube_vision.py
tests/helpers/: __init__.py  embeddings.py  mcp_patched_server.py  mcp_stdio_env.py  mcp_stdio_flow.py
