[project]
name = "pinrag"
version = "0.8.9"
description = "A powerful RAG (Retrieval-Augmented Generation) system built with LangChain, designed as an MCP server for Cursor, VS Code, and other AI assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "langchain-chroma>=0.1.0",
    "langchain>=1.2.10",
    "langchain-classic>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "mcp>=1.26.0",
    "pypdf>=6.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "yt-dlp>=2023.0.0",
    "youtube-transcript-api>=1.2.0",
]

[project.optional-dependencies]
cohere = ["langchain-cohere>=0.2.0"]
eval = ["langsmith>=0.1.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.1",
    "mypy>=1.11.1",
    "langchain-cohere>=0.2.0",
]

[project.scripts]
pinrag-mcp = "pinrag.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
]
lint.ignore = [
    "T201", # allow print()
    "E501",  # ignore line length
    "D101",  # ignore docstring for private modules
    "D103",  # ignore docstring for private modules
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
