[project]
name = "pinrag"
version = "0.9.18"
description = "A powerful RAG (Retrieval-Augmented Generation) system built with LangChain, designed as an MCP server for Cursor, VS Code, and other AI assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "langchain-chroma>=0.1.0",
    "langchain>=1.2.10",
    "langchain-classic>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "mcp>=1.26.0",
    "pypdf>=6.9.1",
    "requests>=2.32.4",
    "yt-dlp>=2026.3.17",
    "youtube-transcript-api>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/ndjordjevic/pinrag"
Repository = "https://github.com/ndjordjevic/pinrag"

[project.optional-dependencies]
cohere = ["langchain-cohere>=0.2.0"]
eval = ["langsmith>=0.1.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.1",
    "mypy>=1.11.1",
    "langchain-cohere>=0.2.0",
]

[project.scripts]
pinrag = "pinrag.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: needs network, API keys, or optional assets (e.g. sample PDF)",
    "pypi_mcp: stdio MCP against published PyPI pinrag package (network, uv tool run pinrag)",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "UP",   # pyupgrade
]
lint.ignore = [
    "T201", # allow print()
    "E501",  # ignore line length
    "D101",  # ignore docstring for private modules
    "D103",  # ignore docstring for private modules
    # pydocstyle pairs that conflict when "D" is selected; Ruff otherwise warns each run
    "D203",  # use D211 (no blank line before class)
    "D213",  # use D212 (summary on first line)
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
